kubernetes/media/jellyfin/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyfin
spec:
  parentRefs:
  - name: envoy
    namespace: envoy-gateway
  hostnames:
  - jellyfin.cecobask.com
  rules:
  - backendRefs:
    - name: jellyfin
      port: 80
